<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>risk_guard</name>
  <version>0.1.0</version>
  <description>ROS 2 Sensing System to Ensure Minimum Risk Conditions for Autonomous Vehicle Failures: Perception for Situational Awareness and Simulation of Environment.</description>
  <url type="repository">https://github.com/dayaguec/risk_guard</url>
  <url type="bugtracker">https://github.com/dayaguec/risk_guard/issues</url>
  <maintainer email="dayaguec@inf.uc3m.es">David Yagüe Cuevas </maintainer>
  <author email="dayaguec@inf.uc3m.es">David Yagüe Cuevas </author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>camera_info_manager</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>image_geometry</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>